--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,6 +1,12 @@
+<% if session[:id] == @fweet.user_id %>
+Make your Fweet even more amazing!
 <form action="/tweets/<%=@fweet.id%>/edit" method="POST">
   <input type="text" name="content" value="<%=@fweet.content%>">
-  <%=@fweet.id%>
   <input type="submit" value="submit">
 </form>
+
+  <form action="/tweet/<%=@fweet.id%>/delete" method="POST">
+    <input type="submit" name="delete" value="Delete Tweet">
+  </form>
+<% end %>
 <br><a href="/tweets">back to the nest</a>
