--- a/app/views/users/slug.erb
+++ b/app/views/users/slug.erb
@@ -1,7 +1,11 @@
 <h1>Welcome to <%=@user.username%>'s Fwitter nest!</h1>
-<a href="/tweets/index">Get back to my nest!</a>
+<a href="/tweets">Get back to my nest!</a>
 <br>
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 <% @fweets.reverse.each do |f|%>
-  <br><%=@user.username%>: <%= f.content %>
+  <% if f.user_id == session[:id] %>
+    <br><%=@user.username%>: <a href="../tweets/<%= f.id %>/edit"><%= f.content %></a>
+  <% else %>
+    <br><%=@user.username%>: <%= f.content %>
+  <% end %>
 <% end %>
