--- a/app/views/user/signup.erb
+++ b/app/views/user/signup.erb
@@ -1,7 +1,7 @@
 <h2><em>Signup</em></h2><br>
 <p class="lead invalid">
-  <% if locals.include?(:invalid_signup) %>
-  <%= invalid_signup %>
+  <% if locals.include?(:missing_field) %>
+  <%= missing_field %>
   <% elsif locals.include?(:taken_username) %>
   <%= taken_username %>
   <% elsif locals.include?(:taken_email) %>
@@ -15,7 +15,7 @@
   <div class="form-group row">
     <label for="username" class="col-sm-1 form-control-label">Username:</label>
     <div class="col-sm-3">
-      <input type="text" id="username" name="signup[username]" class="form-control" placeholder="Username">
+      <input type="text" id="username" name="data[username]" class="form-control" placeholder="Username">
     </div>
   </div>
 
@@ -23,7 +23,7 @@
   <div class="form-group row">
     <label for="email" class="col-sm-1 form-control-label">Email:</label>
     <div class="col-sm-3">
-      <input type="email" id="email" name="signup[email]" class="form-control" placeholder="Email">
+      <input type="email" id="email" name="data[email]" class="form-control" placeholder="Email">
     </div>
   </div>
 
@@ -31,7 +31,7 @@
   <div class="form-group row">
     <label for="password" class="col-sm-1 form-control-label">Password:</label>
     <div class="col-sm-3">
-      <input type="password" id="password" name="signup[password]" class="form-control" placeholder="Password">
+      <input type="password" id="password" name="data[password]" class="form-control" placeholder="Password">
     </div>
   </div><br>
 
