--- a/app/views/tweets/new_tweet.erb
+++ b/app/views/tweets/new_tweet.erb
@@ -6,7 +6,7 @@
     <%= missing_field if locals.include?(:missing_field) %>
   </p>
 
-  <!-- Tweet Textarea -->
+  <!-- Tweet Content -->
   <div class="row">
     <div class="col-sm-1">
       <label for="Content" class="col-sm-1 form-control-label">Tweet:</label>
