--- a/app/views/users/show_user.erb
+++ b/app/views/users/show_user.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @tweets.each do |a| %>
     <% if a.user_id == @user.id %>
-      
+      <li><%= "#{@tweet.content}" %></li>
     <% end %>
   <% end %>
 </ul>
