--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,9 @@
-<h2>Welcome to Fwitter</h2><br>
+<div class="col-sm-offset-4">
+  <div class="row">
+    <h1 id="greeting">Welcome to Fwitter</h1><br>
+  </div>
 
-<p class="lead"><a href="/signup">Signup</a></p>
-<p class="lead"><a href="/login">Login</a></p>
+  <div class="row">
+    <p class="lead"><a href="/signup" class="login_links">Signup</a><a href="/login" class="login_links">Login</a></p>
+  </div>
+</div>
