--- a/app/views/tweets/new_tweet.erb
+++ b/app/views/tweets/new_tweet.erb
@@ -1,22 +1,22 @@
-<h2><em>Create a New Tweet</em></h2><br><br>
+<h2 class="new_and_edit_title">New Tweet</h2><br><br>
 
 <form action="/tweets" method="post">
 
   <p class="lead invalid"><%= missing_field if locals.include?(:missing_field) %></p>
 
   <!-- Tweet Content -->
-  <div class="row">
-    <div class="col-sm-1">
-      <label for="Content" class="col-sm-1 form-control-label">Tweet:</label>
+  <div class="col-sm-offset-2 row">
+    <div class="col-sm-2">
+      <label for="Content" class="col-sm-2 form-control-label">Tweet:</label>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-5">
       <textarea class="form-control" id="content" rows="3" cols="10" name="data[content]" placeholder="Tweet"></textarea>
     </div>
   </div><br><br>
 
   <!-- Submit Button -->
   <div class="form-group row">
-    <div class="col-sm-offset-2 col-sm-1">
+    <div class="col-sm-offset-5 col-sm-2">
       <button type="submit" value="Create Tweet" class="btn btn-success">Create Tweet</button>
     </div>
   </div>
