--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,11 +1,15 @@
-<h2><em>Welcome, <%= User.find(session[:user_id]).username.capitalize %></em></h2><br>
+<div class="col-sm-offset-1">
 
-<% if @tweets.nil? %>
-    <p class="lead">There are no tweets</p>
+  <h2 class="tweets_title">Welcome, <%= User.find(session[:user_id]).username.capitalize %></h2><br><br>
+
+  <% if @tweets.nil? %>
+      <p class="lead">There are no tweets</p>
   <% else %>
     <ul>
       <% @tweets.each do |tweet| %>
-      <li class="lead"><%= tweet.content %></li>
+      <li class="lead tweets"><%=tweet.user.username.capitalize%>: <%=tweet.content%> </li>
       <% end %>
     </ul>
-<% end %>
+  <% end %>
+
+</div>
