--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -1,32 +1,34 @@
-<h2><em>Login</em></h2><br>
-<p class="lead invalid">
-  <%= missing_field if locals.include?(:missing_field) %>
-  <%= invalid_login if locals.include?(:invalid_login) %>
-</p>
+<div class="col-sm-offset-4">
+  <h2 id="signup">Login</h2><br>
 
-<form action="/login" method="post">
+  <p class="lead invalid">
+    <%= missing_field if locals.include?(:missing_field) %>
+    <%= invalid_login if locals.include?(:invalid_login) %>
+  </p>
 
-  <!-- Username -->
-  <div class="form-group row">
-    <label for="username" class="col-sm-1 form-control-label">Username:</label>
-    <div class="col-sm-3">
-      <input type="text" id="username" name="data[username]" class="form-control" placeholder="Username">
+  <form action="/login" method="post">
+
+    <!-- Username -->
+    <div class="form-group row">
+      <label for="username" class="col-sm-2 form-control-label">Username:</label>
+      <div class="col-sm-3">
+        <input type="text" id="username" name="data[username]" class="form-control" placeholder="Username">
+      </div>
     </div>
-  </div>
 
-  <!-- Password -->
-  <div class="form-group row">
-    <label for="password" class="col-sm-1 form-control-label">Password:</label>
-    <div class="col-sm-3">
-      <input type="password" id="password" name="data[password]" class="form-control" placeholder="Password">
+    <!-- Password -->
+    <div class="form-group row">
+      <label for="password" class="col-sm-2 form-control-label">Password:</label>
+      <div class="col-sm-3">
+        <input type="password" id="password" name="data[password]" class="form-control" placeholder="Password">
+      </div>
+    </div><br>
+
+    <!-- Submit Button -->
+    <div class="form-group row">
+      <div class="col-sm-offset-2 col-sm-9">
+        <button type="submit" value="Login" class="btn btn-primary">Login</button>
+      </div>
     </div>
-  </div><br>
 
-  <!-- Submit Button -->
-  <div class="form-group row">
-    <div class="col-sm-offset-2 col-sm-9">
-      <button type="submit" value="Login" class="btn btn-primary">Login</button>
-    </div>
-  </div>
-
-</form>
+  </form>
