--- a/app/views/user/signup.erb
+++ b/app/views/user/signup.erb
@@ -1,45 +1,48 @@
-<h2><em>Signup</em></h2><br>
-<p class="lead invalid">
-  <% if locals.include?(:missing_field) %>
-  <%= missing_field %>
-  <% elsif locals.include?(:taken_username) %>
-  <%= taken_username %>
-  <% elsif locals.include?(:taken_email) %>
-  <%= taken_email %>
-  <% end %>
-</p>
+<div class="col-sm-offset-4">
+  <h2 id="signup">Signup</h2><br>
 
-<form action="/signup" method="post">
+  <p class="lead invalid">
+    <% if locals.include?(:missing_field) %>
+    <%= missing_field %>
+    <% elsif locals.include?(:taken_username) %>
+    <%= taken_username %>
+    <% elsif locals.include?(:taken_email) %>
+    <%= taken_email %>
+    <% end %>
+  </p>
 
-  <!-- Username -->
-  <div class="form-group row">
-    <label for="username" class="col-sm-1 form-control-label">Username:</label>
-    <div class="col-sm-3">
-      <input type="text" id="username" name="data[username]" class="form-control" placeholder="Username">
+  <form action="/signup" method="post">
+
+    <!-- Username -->
+    <div class="form-group row">
+      <label for="username" class="col-sm-2 form-control-label">Username:</label>
+      <div class="col-sm-3">
+        <input type="text" id="username" name="data[username]" class="form-control" placeholder="Username">
+      </div>
     </div>
-  </div>
 
-  <!-- Email -->
-  <div class="form-group row">
-    <label for="email" class="col-sm-1 form-control-label">Email:</label>
-    <div class="col-sm-3">
-      <input type="email" id="email" name="data[email]" class="form-control" placeholder="Email">
+    <!-- Email -->
+    <div class="form-group row">
+      <label for="email" class="col-sm-2 form-control-label">Email:</label>
+      <div class="col-sm-3">
+        <input type="email" id="email" name="data[email]" class="form-control" placeholder="Email">
+      </div>
     </div>
-  </div>
 
-  <!-- Password -->
-  <div class="form-group row">
-    <label for="password" class="col-sm-1 form-control-label">Password:</label>
-    <div class="col-sm-3">
-      <input type="password" id="password" name="data[password]" class="form-control" placeholder="Password">
+    <!-- Password -->
+    <div class="form-group row">
+      <label for="password" class="col-sm-2 form-control-label">Password:</label>
+      <div class="col-sm-3">
+        <input type="password" id="password" name="data[password]" class="form-control" placeholder="Password">
+      </div>
+    </div><br>
+
+    <!-- Submit Button -->
+    <div class="form-group row">
+      <div class="col-sm-offset-2 col-sm-9">
+        <button type="submit" value="Signup" class="btn btn-primary">Signup</button>
+      </div>
     </div>
-  </div><br>
 
-  <!-- Submit Button -->
-  <div class="form-group row">
-    <div class="col-sm-offset-2 col-sm-9">
-      <button type="submit" value="Signup" class="btn btn-primary">Signup</button>
-    </div>
-  </div>
-
-</form>
+  </form>
+</div>
