--- a/app/views/tweets/new_tweet.erb
+++ b/app/views/tweets/new_tweet.erb
@@ -10,7 +10,8 @@
       <label for="Content" class="col-sm-2 form-control-label">Tweet:</label>
     </div>
     <div class="col-sm-5">
-      <textarea class="form-control" id="content" rows="3" cols="10" name="data[content]" placeholder="Tweet"></textarea>
+      <textarea class="form-control" id="content" rows="3" cols="10"
+       name="data[content]" placeholder="Tweet"></textarea>
     </div>
   </div><br><br>
 
