Finished the project with my man Philip.

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
 <form action='/tweets/new' method='POST'>
-	<label>Tweet Content: </label><input type='text' name='content'>
+	<label>Tweet Content: </label><br><br><input type='text' name='content'><br><br>
 	<input type="submit" value="submit">
 </form>
