--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,11 @@
-<h1>Hello World</h1><form>
-	
+<h1>User Signup</h1>
+<form method="POST" action="signup">
+  <label>Username:</label> <input type="text" name="username">
+  <label>Email:</label><input type="text" name="email">
+  <label>Password:</label><input type="text" name="password">
+  <input type="submit">
 </form>
+<p>Or click on Log in</p>
+<form action="/login" method="GET">
+	<button type="submit">Log in</button>
+</form><br>
