--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,8 @@
-<%= @tweet.content %>
+<h3><%= @tweet.content %></h3>
 
 <form action="<%="/tweets/#{@tweet.id}/edit"%>" method="GET">
 	<input type="submit" value="Edit Tweet">
-</form>
+</form><br>
 <form action="<%="/tweets/#{@tweet.id}/delete"%>" method="POST">
 	<input type="submit" value="Delete Tweet">
 </form>
