--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,10 @@
-<h1>Hello World</h1>
-
 <h1>Login</h1>
 <form action='/login' method="POST">
   <label>Username: </label><input type="text" name="username">
   <label>Password: </label><input type="text" name="password">
   <input type="submit" value="submit">
-</form> 
+</form><br>
+<p>Or if you would like to signup click below</p>
+<form action="/signup" method="GET">
+	<button type="submit">Signup</button>
+</form>
