--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
 <h3>Create a new tweet</h3>
 
-<form action="/tweets/new" method="POST">
+<form action="/tweets" method="POST">
 <p>Tweet: <input type="text" name="content"></p>
 <input type="submit" name="submit" value="submit">
 </form>
