finished new and show

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,5 @@
 <h1>New Tweet</h1>
+<form method="post" action="/tweets">
+    <input id="content" type="text" name="content">
+    <input type="submit" value="submit">
+</form>
