--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,6 @@
 <h1>Tweet</h1>
 <%= @tweet.content %>
-<form method="post" action="">
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
     <input id="hidden" type="hidden" name="_method" value="delete">
     <input type="submit" value="Delete Tweet">
 </form>
