--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,11 +1,11 @@
 <h1>Create Account</h1>
 
 
-<form method="post" action="/">
+<form method="post" action="/signup">
 
-  Username: <input type="text" name="username" required="required">
-  Email: <input type="email" name="email" required="required">
-  Password: <input type="password" name="password" required="required">
+  Username: <input type="text" name="username" required>
+  Email: <input type="text" name="email" required>
+  Password: <input type="password" name="password" required>
 
   <input type="submit" value="Create Account">
 
