tweets/new partial

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,8 +1,8 @@
 <h1>Create New Tweet</h1>
 
-<form method="post" action="/tweets">
+<form method="post" action="/tweets/new">
 
-  <textarea name="content">Tweet here</textarea>
-  <button type="submit">Post Tweet</button>
+  <textarea name="content" required>Tweet here</textarea>
+  <button type="submit">submit</button>
   
 </form>
