partial delete commit

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,16 +1,11 @@
-
-<h1>Tweets</h1>
-
 Welcome, <%= @user.username %>
 
 <% @user.tweets.each do |tweet| %>
   <p>look at this tweet <%= tweet.content %></p>
 <% end %>
 
-<a href="/tweets/new">Create New Tweet</a>
 
-<a href="/logout">Log Out</a>
-
-
-
-
+<form method="post" action="/tweets/<%= @tweet.id %>/delete">
+ 
+ <button type="submit">Delete Tweet</button>
+<form>
