--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,12 +1,17 @@
 
-<h1>Hello</h1>
+
+
+<p><%= @tweet.id %> </p>
 
 <p><%= @tweet.content %></p>
+
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+
 
 <form method="post" action="/tweets/<%= @tweet.id %>/delete">
  <input id="hidden" type="hidden" name="_method" value="DELETE">
  <button type="submit">Delete Tweet</button>
 <form>
 
-<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+
 
