--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,10 +1,9 @@
 
-<form method="post" action="/tweets/<%= @tweet.id %>/edit">
+
+<h1>Edit Tweet</h1>
+<form method="POST" action="/tweets/<%= @tweet.id %>/edit">
   <input type="hidden" name="_method" id="hidden" value="patch">
-  <input type="text" name="content" id="content">
-
-  <button type="submit">submit</button>
+  <textarea type="text" name="content"><%= @tweet.content %></textarea>
+  <input type="submit" value="submit">
   
-
 </form>
-
