fwitter and waste the hours in an offhand way

--- a/app/views/tweets.erb
+++ b/app/views/tweets.erb
@@ -3,3 +3,8 @@
 <%@tweets.each do |tweet|%>
   <%=tweet.content%> <br>
 <%end%>
+
+
+<form method="get" action="/logout">
+<input type="submit" value="Logout">
+</form>
