--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -7,5 +7,5 @@
 <label for='password'>Password:</label>
 <input type='text' name='password' id='user_password'>
 
-<input type="submit" value="Log In">
+<input type="submit" value="submit">
 </form>
