--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -13,4 +13,7 @@
     <label for="password">Password: </label>
     <input type="text" name="password" id="password">
   </div>
+  <div>
+    <input type="submit" id="submit" value="submit">
+  </div>
 </form>
