--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -7,7 +7,7 @@
   </div>
   <div>
     <label for="password">Password: </label>
-    <input type="text" name="password" id="password">
+    <input type="password" name="password" id="password">
   </div>
   <div>
     <input type="submit" id="submit" value="submit">
