--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -11,7 +11,7 @@
   </div>
   <div>
     <label for="password">Password: </label>
-    <input type="text" name="password" id="password">
+    <input type="password" name="password" id="password">
   </div>
   <div>
     <input type="submit" id="submit" value="submit">
