--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,6 +1,7 @@
 <h1>New Tweet:</h1>
 
 <form action="/tweets" method="POST">
+  <input type="hidden" name="user_id" id="hidden" value="<%=current_user.id%>" />
   <div>
     <label for="content">Content: </label>
     <input type="text" name="content" id="content">
