--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -4,10 +4,10 @@
     <title>Fwitter</title>
   </head>
   <body>
-    <h1>Welcome Tweets!</h1>
-    <%= @tweets.each do |tweet| %>
-    <li><%= tweet.content %></li>
+    <h1>Welcome, <%= @username %></h1>
+    <h3>Your Fweets</h3>
+    <% @tweets.each do |tweet| %>
+    <li><a href="/tweets/#{<%= tweet.id %>}"><%= tweet.content %></a></li>
     <% end %>
-
   </body>
 </html>
