--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,7 +4,7 @@
     <title>Fwitter</title>
   </head>
   <body>
-    <h1>Welcome Tweets!</h1>
+    <h1>Welcome Fweets!</h1>
     <%= @tweets.each do |tweet| %>
     <li><%= tweet%></li>
     <% end %>
