Completed all specs - all tests passing

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,13 @@
   </head>
   <body>
     <h1>Welcome to Fwitter!</h1>
-
+    <p>Have an account? Proceed to login <br/>
+    <a href="/login">Login</a>
+    </p>
+    <p> OR </p>
+    <p>
+    <a href="/signup">Signup</a>
+  </p>
 
   </body>
 </html>
