--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -8,9 +8,9 @@
     <form action="/login" method="POST">
       <label>Username</label>
       <input type="text" name="username" >
-      <label>password</label>
+      <label>Password</label>
       <input type="text" name="password" >
-      <input type="submit" name="submit" value="Submit">
+      <input type="submit" name="submit" value="submit">
     </form>
 
 
