--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,8 +6,21 @@
   <body>
     <h1>Welcome, <%= @username %></h1>
     <h3>Your Fweets</h3>
+    <% if @tweets.empty? %>
+    <h6>You have no fweets yet!</h6>
+    <p><a href="/tweets/new">New Fweet</a></p>
+    <% else %>
     <% @tweets.each do |tweet| %>
-    <li><a href="/tweets/><%= tweet.id %>/edit"><%= tweet.content %></a></li>
+    <li><a href="/tweets/<%= tweet.id %>/edit"><%= tweet.content %></a>
+      <form method="POST" action = "/tweets/<%= tweet.id %>/delete">
+        <input id="hidden" type="hidden" name="_method" value="delete">
+        <button name="submit" type="submit" value="Delete Tweet">Delete Tweet</button>
+      </form>
+    </li>
     <% end %>
+    <% end %>
+    <p>
+    <span style="margin-left:10px;"><a href="/logout">LogOut</span>
+    </p>
   </body>
 </html>
