--- a/app/views/user/create_user.erb
+++ b/app/views/user/create_user.erb
@@ -12,7 +12,7 @@
       <input type="email" name="email" >
       <label>password</label>
       <input type="text" name="password" >
-      <input type="submit" name="submit" value="Submit">
+      <input type="submit" name="submit" value="submit">
     </form>
 
 
