Completed Twitter Lab

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -4,10 +4,10 @@
     <title>Fwitter</title>
   </head>
   <body>
-    <h1>New Fweet</h1>
+    <h1>Create New Fweet</h1>
     <form method = "POST" action="/tweets">
-      <label>Add your Fweet</label>
-      <input type="text" name="content" value="content">
+      <label for="content">Add your Fweet</label><br/>
+      <textarea  rows="4" cols="50" name="content"></textarea><br/>
       <input type="submit" name="submit" value="submit">
     </form>
   </body>
