--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Fweet <%= @tweet.id %></h1>
       <p><%= @tweet.content %></p>
-      <p><a href="/tweets/<%=@tweet.id %>/edit">Edit Tweet</a></p>
+      <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
       <form method="POST" action = "/tweets/<%=@tweet.id %>/delete">
         <input id="hidden" type="hidden" name="_method" value="delete">
         <button name="submit" type="submit">Delete Tweet</button>
