--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,12 +5,12 @@
   </head>
   <body>
     <h1>Welcome to Fwitter!</h1>
-    <p>Have an account? Proceed to login <br/>
+    <p>Have an account? Proceed to
     <a href="/login">Login</a>
     </p>
     <p> OR </p>
-    <p>
-    <a href="/signup">Signup</a>
+    <p> Don't have an account?
+    <a href="/signup">Signup</a> is easy!
   </p>
 
   </body>
