--- a/app/views/user/create_user.erb
+++ b/app/views/user/create_user.erb
@@ -4,14 +4,14 @@
     <title>Fwitter</title>
   </head>
   <body>
-    <h1>Signup!</h1>
+    <h1>Fwitter Signup!</h1>
     <form action="/signup" method="POST">
-      <label>Username</label>
-      <input type="text" name="username" >
-      <label>Email</label>
-      <input type="email" name="email" >
-      <label>password</label>
-      <input type="text" name="password" >
+      <p><label>Username</label><br>
+      <input type="text" name="username" ></p>
+      <p><label>Email</label><br>
+      <input type="email" name="email" ></p>
+      <p><label>Password</label><br>
+      <input type="text" name="password" ></p>
       <input type="submit" name="submit" value="submit">
     </form>
 
