--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -4,7 +4,7 @@
     <title>Fwitter</title>
   </head>
   <body>
-    <h1>Login </h1>
+    <h1>Fwitter Login </h1>
     <form action="/login" method="POST">
       <label>Username</label>
       <input type="text" name="username" >
