--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Welcome to Fwitter!</h1>
-
+    <h2><a href="/signup">Sign Up</a> or <a href="/login">Log In</a></h2>
 
   </body>
 </html>
