--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -4,15 +4,16 @@
     <title>Fwitter</title>
   </head>
   <body>
+    
     <h1>Login </h1>
-    <form action="/login" method="POST">
+    
+    <form method="post" action="/login">
       <label>Username</label>
-      <input type="text" name="username" >
+      <input type="text" name="username">
       <label>password</label>
-      <input type="text" name="password" >
-      <input type="submit" name="submit" value="Submit">
+      <input type="text" name="password">
+      <input type="submit" value="submit">
     </form>
-
 
   </body>
 </html>
