--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,4 +1,7 @@
 <h3><%= @tweet.content %></h3> 
-<a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a>
+<form method="POST" action="/tweets/<%= @tweet.id %>">
+  <input type="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet">
+</form>
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 
