--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,8 @@
-<h1>Welcome, <%= @user.username %></h1>
-<h2>Tweets:</h2>
+<p> Welcome <%= current_user.username %>
+<h2> Tweets </h2>
+
 <% @tweets.each do |tweet| %>
-  <p><%= tweet.user.username %>: <%= tweet.content %></p>
+  <div>
+    <%= tweet.content %>
+  </div>
 <% end %>
