--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,10 +1,7 @@
-<h1>Sign Up</h1>
-<form method="POST" action="/signup">
-  <label for="username">Username: </label>
-  <input type="text" id="username" name="username"><br><br>
-  <label for="email">Email: </label>
-  <input type="text" id="email" name="email"><br><br>
-  <label for="password">Password: </label>
-  <input type="password" id="password" name="password"><br><br>
-  <input type="submit" value="submit">
+<h3>Sign Up</h3>
+<form action="/signup" method="POST">
+  <p>Name: <input type="text" name="username"></p>
+  <p>Email: <input type="text" name="email"></p>
+  <p>Password: <input type="text" name="password"></p>
+  <input value="submit" type="submit">
 </form>
