homepage & signup tests passing

--- a/app/views/failure.erb
+++ b/app/views/failure.erb
@@ -6,5 +6,5 @@
   <%= message %>
 <% end %>
 
-<h3><a href="/login">Wanna try again?</h3>
+<h3><a href="/login">Try logging in again?</h3>
 <h3><a href="/signup">Need to Create an account?</h3>
