--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,16 +2,16 @@
 
 <form action="/signup" method="post">
 
-<label>Username: </label><input type="text" name="user[username]" id="new_user_name"></input>
+<label>Username: </label><input type="text" name="username" id="new_user_name"></input>
 <br></br>
 
-<label>Email: </label><input type="text" name="user[email]" id="new_user_email"></input>
+<label>Email: </label><input type="text" name="email" id="new_user_email"></input>
 <br></br>
 
-<label>Password: </label><input type="text" name="user[password]" id="new_user_password">
+<label>Password: </label><input type="text" name="password" id="new_user_password">
 <br></br>
 
-<button type="submit" name="create_user" id="create_user">Sign me up!</button>
+<button type="submit">Sign me up!</button>
 
 
 </form>
