--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,12 +2,12 @@
 
 <form action="/login" method="post">
 
-<label>Email: </label><input type="text" name="user[email]" id="user_email"></input>
+<label>Username: </label><input type="text" name="username" id="user_email"></input>
 <br></br>
 
-<label>Password: </label><input type="text" name="user[password]" id="user_password"></input>
+<label>Password: </label><input type="text" name="password" id="user_password"></input>
 <br></br>
 
-<button type="submit" name="login" id="login">Log me in!</button>
+<button type="submit" name="login" id="submit">Log me in!</button>
 
 </form>
