--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -13,7 +13,7 @@
 <br></br>
 <button id="submit" type="submit" name="edit">Edit this shit!</button>
 
-<button type="submit" name="cancel"><a href="/tweets">Nah, shit shit's genius</a></button> 
+<button type="submit" name="cancel"><a href="/tweets">Nah, this shit's genius</a></button> 
 </form>
 
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
