all tests passing

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -6,5 +6,5 @@
 <input type="text" name="content" id="new_tweet"></input>
 
 <br></br>
-<button id="submit" type="submit" name="user[id]" value="<%=@current_user.id%>">HOLLA!</button>
+<button id="submit" type="submit" name="user[id]" value="<%=current_user.id%>">HOLLA!</button>
 </form>
