add links, seperated controllers, and other cosmetic changes

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -4,3 +4,6 @@
   <input type="text" name="content" id="content">
   <input type="submit" id="submit">
 </form>
+
+<p><a href="/tweets">Return to all tweets.</a></p>
+<p><a href="/logout">Click here to logout.</a></p>
