--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,6 +5,8 @@
   <label for="username">Username:</label>
   <input type="text" name="username" id="username">
   <label for="password">Password:</label>
-  <input type="text" name="password" id="password">
+  <input type="password" name="password" id="password">
   <input type="submit" id="submit">
 </form>
+
+<p>Don't have and account? <a href="/signup">Click here to sign up.</a></p>
