--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,11 +1,14 @@
 <h1>Join The Fwitter Community.</h1>
+<h4>Your fellow coders await you...</h4>
 
 <form method="POST" action="/signup">
   <label for="username">Username:</label>
   <input type="text" name="username" id="username">
   <label for="email">Email:</label>
-  <input type="text" name="email" id="email">
+  <input type="email" name="email" id="email">
   <label for="password">Password:</label>
-  <input type="text" name="password" id="password">
+  <input type="password" name="password" id="password">
   <input type="submit" id="submit">
 </form>
+
+<p>Already a member? <a href="/login">Click here to sign in.</a></p>
