--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,10 @@
-<h1><%= @user.username %></h1>
+<h1><%= @user.username.capitalize %></h1>
 
 <ul>
 <% @user.tweets.each do |tweet|%>
-  <li><%=tweet.content%></li>
+  <li><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a></li>
 <% end %>
 </ul>
+
+<p><a href="/tweets">See all tweets.</a></p>
+<p><a href="/logout">Click here to logout.</a></p>
