working on tweets index

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,5 @@
-<h1>All Ftweets</h1>
+<h1>Welcome, <%=@user.username%> - All Tweets</h1>
+
+<% @tweets.each do |tweet| %>
+  <p><%=tweet.content%></p>
+<% end %>
