--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,11 +3,11 @@
 
 <form action="/login" method="post">
   <h2>username:</h2>
-  <input type="text" name="user[username]"></input>
+  <input type="text" id="username" name="user[username]"></input>
   <br>
   <h2>password:</h2>
-  <input type="password" name="user[password]"></input>
+  <input type="password" id="password" name="user[password]"></input>
   <br><br>
-  <input type="submit" value="Log in"></input>
+  <input type="submit" id="submit" value="Log in"></input>
 
 </form>
