--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,7 @@
 <h1>Welcome, <%=@user.username%> - All Tweets</h1>
 
 <% @tweets.each do |tweet| %>
-  <p><%=tweet.content%></p>
+  <p>
+    <br><%=tweet.content%>
+  </p>
 <% end %>
