--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,13 +1,7 @@
-<h1> Log in below</h1>
+<h2>Log In</h2>
 
-
-<form action="/login" method="post">
-  <h2>username:</h2>
-  <input type="text" id="username" name="user[username]"></input>
-  <br>
-  <h2>password:</h2>
-  <input type="password" id="password" name="user[password]"></input>
-  <br><br>
-  <input type="submit" id="submit" value="Log in"></input>
-
+<form method="post" action="/login">
+  <label>Username: <input type="text" id="username" name="username"></label>
+  <label>Password: <input type="password" id="password" name="password"></label>
+  <br><input type="submit" id="submit" value="Log In">
 </form>
