--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Playlister; not a copyright violation at all.</title>
+    <title>Fwitter; not a copyright violation at all.</title>
   </head>
 
   <body>
     <header>
       <h3>{<a href='/'>Home</a>}</h3>
-      <h4>{<a href='/'>My Profile</a>;<a href='/logout'>(logout)</a>} {<a href='/'>Other fweeters</a>} {<a href='/'>Fweet</a>;} </h4>
+      <h4>{<a href='/tweets'>My Fweets</a>;<a href='/logout'>(logout)</a>} {<a href='/'>Other fweeters</a>} {<a href='/tweets/new'>Fweet</a>;} </h4>
     </header>
     <%= yield %>
   </body>
