down to last 4 errors

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,17 @@
-<h1>Welcome, <%=@user.username%> - All Tweets</h1>
+<body>
+<h1>Welcome, </h1>
+<h2><%=@user.username%> - All Tweets</h2>
+
+ <form action="/tweets/new" method="get">
+   <input type="submit" value="New Tweet"></input>
+ </form>
 
 <% @tweets.each do |tweet| %>
-  <p><%=tweet.content%></p>
+  <p><a href="/tweets/<%= tweet.id%>"><%=tweet.content%></a></p>
 <% end %>
+
+ <form action="/logout" method="get">
+   <input type="submit" value="Log Out"></input>
+ </form>
+
+</body>
