--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,6 +8,6 @@
   <h2>password:</h2>
   <input type="password" id="password" name="user[password]"></input>
   <br><br>
-  <input type="submit" id="submit" value="Log in"></input>
+  <input type="submit" id="submit" value="Log in" id="login"></input>
 
 </form>
