--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,10 +3,10 @@
 
 <form action="/login" method="post">
   <h2>username:</h2>
-  <input type="text" id="username" name="user[username]"></input>
+  <input type="text" id="username" name="username"></input>
   <br>
   <h2>password:</h2>
-  <input type="password" id="password" name="user[password]"></input>
+  <input type="password" id="password" name="password"></input>
   <br><br>
   <input type="submit" id="submit" value="Log in" id="login"></input>
 
