--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,12 +1,13 @@
 <h1>Sign Up</h1>
 
 <form action="/signup" method="post">
-  <p>Username: <input type="text" name="username"></p>
-  <p>Emal: <input type="text" name="email" value=""></p>
-  <p>Password: <input type="password" name="password" value=""></p>
-  <input type="submit" id="submit" name="submit" value="Create User">
-</form>
 
-<% unless locals.empty? %>
-  <%= message %>
-<% end %>
+  <p>Username: <input type="text" name="username"></p>
+
+  <p>Email: <input type="text" name="email"></p>
+
+  <p>Password: <input type="password" name="password"></p>
+
+  <input type="submit" id="submit" name="submit" value="Create User">
+  
+</form>
