--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,7 +1,6 @@
 <h3>Create A New Tweet</h3>
 <form action="/tweets" method="POST">
-  <input type="text" name="content" placeholder="Tweet Content:">
-  <input type="submit" value="Submit Tweet">
+  <input type="text" class="form-control" name="content" placeholder="Tweet Content">
+  <br><br>
+  <input type="submit" class="btn btn-primary" value="submit">
 </form>
-
-
