--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,7 @@
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
-	<input type="text" name="username" placeholder="Username:">
-	<input type="text" name="email" placeholder="Email:">
-	<input type="password" name="password" placeholder="Password:">
-	<input type="submit" value="Sign Up">
+	<input type="text" class="form-control" name="username" placeholder="Username:">
+	<input type="text" class="form-control" name="email" placeholder="Email:">
+	<input type="password" class="form-control" name="password" placeholder="Password:">
+	<input type="submit" class="btn btn-primary" value="Sign Up">
 </form>
