--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h3>Log In</h3>
 <form action="/login" method="POST">
-	<input type="text" name="username" placeholder="Username:">
-	<input type="password" name="password" placeholder="Password:">
-	<input type="submit" value="Log In">
+	<input type="text" class="form-control" name="username" placeholder="Username:">
+	<input type="password" class="form-control" name="password" placeholder="Password:">
+	<input type="submit" class="btn btn-primary" value="submit">
 </form>
 
