--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,6 +1,7 @@
-<h1>Login to Fwitter</h1>
-<form method="post" action="/login">
+<h1>Sign Up for Fwitter</h1>
+<form method="post" action="/signup">
 <label>Username: </label><input type="text" name="username" id="username"><br/>
+<label>E-mail: </label><input type="text" name="email" id="email"><br/>
 <label>Password: </label><input type="text" name="password" id="password"><br/>
 <input type="submit" value="submit">
 </form>
