added new tweet and show tweet

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,5 @@
 <h1>Create Tweet!</h1>
+<form method="post" action="/tweets">
+<input type="textbox" size="50" name="content">
+<input type="submit" value="Tweet!">
+</form>
