--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,19 @@
-"Welcome, User"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Tweets</title>
+</head>
+<body>
+<h2>Welcome, <%=@username%>!</h2>
+<h2>Tweets:</h2>
+<ul>
+  <%@tweets.each do |tweet|%>
+  <li>
+    <a href="/tweets/tweet.id"><%=tweet.content%></a>
+  </li>
+  <%end%>
+</ul>
+  
+</body>
+</html>
