--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,5 @@
 <h1>Create Tweet!</h1>
 <form method="post" action="/tweets">
-<textarea rows="5" cols="40" name="content"></textarea>
-<input type="submit" value="Tweet!">
+  <textarea rows="5" cols="40" name="content"></textarea>
+  <input type="submit" id="submit" value="Tweet!">
 </form>
