--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,5 +2,5 @@
 <a href="/tweets/<%=@tweet.id%>/edit"><input type="submit" value="Edit Tweet"></a>
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
 <input type="hidden" name="_method" value="delete">
-<input type="submit" value="Delete">
+<input type="submit" id="Delete Tweet" value="Delete Tweet">
 </form>
