--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,6 @@
 <h1>#Username's Tweets:</h1>
 
+<p>Welcome, <%= current_user.username %>!</p>
 <% Tweet.all.each do |tweet| %>
   <a href="/tweets/<%=tweet.id%>"><%= tweet.content %><br><br></a>
 <% end %>
