--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,10 @@
+<% unless locals.empty? %>
+  <%= message %>
+<% end %>
+
 <h1><%=@tweet.content%></h1>
 <a href="/tweets/<%=@tweet.id%>/edit"><input type="submit" value="Edit Tweet"></a>
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
 <input type="hidden" name="_method" value="delete">
-<input type="submit" value="Delete">
+<input type="submit" value="Delete Tweet">
 </form>
