--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -10,7 +10,7 @@
 <ul>
   <%@tweets.each do |tweet|%>
   <li>
-    <a href="/tweets/tweet.id"><%=tweet.content%></a>
+    <a href="/tweets/<%= tweet.id %>"><%=tweet.content%></a>
   </li>
   <%end%>
 </ul>
