--- a/app/views/tweets/users/login.erb
+++ b/app/views/tweets/users/login.erb
@@ -5,7 +5,7 @@
 <h1>Login Form</h1>
 
 <form method="post" action='/login'>
-  Username: <input type="text" id="username" name="username">
-  Password: <input type="text" id="password" name="password">
+  Username: <input type="text" id="username" name="username"><br><br>
+  Password: <input type="text" id="password" name="password"><br><br>
   <input type="submit" id="submit">
 </form>
