added fwitter logo

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,3 +1,5 @@
+<a href="/"><img src="https://farm2.staticflickr.com/1515/25704872810_fa439133c1_n.jpg"></a><br><br>
+
 <h1>Create Tweet!</h1>
 <form method="post" action="/tweets">
   <textarea rows="5" cols="40" name="content"></textarea>
