--- a/app/views/tweets/users/create_user.erb
+++ b/app/views/tweets/users/create_user.erb
@@ -1,3 +1,6 @@
+
+<a href="/"><img src="https://farm2.staticflickr.com/1515/25704872810_fa439133c1_n.jpg"></a><br><br>
+
 <h1>Signup Form</h1>
 
 <form method="post" action='/signup'>
