--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,8 +1,10 @@
+<a href="/"><img src="https://farm2.staticflickr.com/1515/25704872810_fa439133c1_n.jpg"></a><br><br>
+
 <% unless locals.empty? %>
   <%= message %>
 <% end %>
 
-<h1>#Username's Tweets:</h1>
+<h1><%= current_user.username %>'s Tweets:</h1>
 
 <p>Welcome, <%= current_user.username %>!</p>
 <% Tweet.all.each do |tweet| %>
