Passing Two Tests. Woot.

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,3 +2,5 @@
 
 
 <!-- have login and signup links here -->
+<a href="/users/login">Log In Here</a>
+<a href="/users/create_user">Sign Up Here</a>
