Modified homepage and show_tweet

--- a/app/views/homepage.erb
+++ b/app/views/homepage.erb
@@ -1,3 +1,5 @@
+<h1>Welcome to Fwitter</h1>
+
 <a href="/"><img src="https://farm2.staticflickr.com/1515/25704872810_fa439133c1.jpg"><br><br></a>
 
   <a href="login"><input type="submit" value="Log In"></a>
