--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,5 +2,5 @@
 
 
 <!-- have login and signup links here -->
-<a href="/users/login">Log In Here</a>
-<a href="/users/create_user">Sign Up Here</a>
+<a href="/login">Log In Here</a>
+<a href="/signup">Sign Up Here</a>
