--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -2,6 +2,7 @@
 <%=tweet.content%>
 <%end%>
 =======
-<a href="/login">Log In Here</a>
-<a href="/signup">Sign Up Here</a>
 
+
+<a href="/logout">Log Out</a>
+<a href="/signup">Sign Up Here</a>
