changed input type for password and email

--- a/app/views/tweets/users/create_user.erb
+++ b/app/views/tweets/users/create_user.erb
@@ -4,7 +4,7 @@
 
 <form method="post" action='/signup'>
   Username: <input required type="text" id="username" name="username"><br><br>
-  Email: <input required type="text" id="email" name="email"><br><br>
-  Password: <input required type="text" id="password" name="password"><br><br>
+  Email: <input required type="email" id="email" name="email"><br><br>
+  Password: <input required type="password" id="password" name="password"><br><br>
   <input type="submit" id="submit">
 </form>
