--- a/app/views/tweets/users/login.erb
+++ b/app/views/tweets/users/login.erb
@@ -8,7 +8,7 @@
 
 <form method="post" action='/login'>
   Username: <input required type="text" id="username" name="username"><br><br>
-  Password: <input required type="text" id="password" name="password"><br><br>
+  Password: <input required type="password" id="password" name="password"><br><br>
   <input type="submit" id="submit" value="Login">
 </form><br>
 
