modified headers and added more nav buttons

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,12 +4,15 @@
   <%= message %>
 <% end %>
 
-<h1>Tweet:</h1>
+<h1>Your tweet:</h1>
 
 <h1><%=@tweet.content%></h1>
 
 <a href="/tweets/<%=@tweet.id%>/edit"><input type="submit" value="Edit Tweet"></a><br><br>
+
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
-<input id="hidden" type="hidden" name="_method" value="DELETE">
-<input type="submit" id="Delete Tweet" value="Delete Tweet"><br><br>
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" id="Delete Tweet" value="Delete Tweet"><br>
 </form>
+
+<a href="/tweets"><input type="submit" value="Back to Tweets"></a><br><br>
