--- a/app/views/tweets/users/login.erb
+++ b/app/views/tweets/users/login.erb
@@ -4,7 +4,7 @@
   <%= message %>
 <% end %>
 
-<h1>Login Form</h1>
+<h1>Log in to Fwitter</h1>
 
 <form method="post" action='/login'>
   Username: <input required type="text" id="username" name="username"><br><br>
