--- a/app/views/tweets/users/tweets.erb
+++ b/app/views/tweets/users/tweets.erb
@@ -1,6 +1,6 @@
 <a href="/"><img src="https://farm2.staticflickr.com/1515/25704872810_fa439133c1_n.jpg"></a><br><br>
 
-<h1>Hey <%= @user.username %></h1>
+<h1>Hello <%= @user.username %>!</h1>
 <h2>Here are all your tweets:</h2>
 
 <% Tweet.all.each do |tweet| %>
@@ -9,5 +9,5 @@
   <% end %>
 <% end %>
 
+<a href="/tweets/new"><input type="submit" value="New Tweet"></a><br><br>
 <a href="logout"><input type="submit" value="Log Out"></a>
-<a href="/tweets/new"><input type="submit" value="New Tweet"></a>
