Polished up the front end

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,8 +3,8 @@
 
 <!-- have login and signup links here -->
 <a href="/login">Log In Here</a>
-<!-- <a href="/users/create_user.erb">Sign Up Here</a> -->
+<a href="/signup">Sign Up Here</a>
 
-<form action="/signup" method="POST">
+<!-- <form action="/signup" method="POST">
   <input type="submit" value="Sign Up">
-</form>
+</form> -->
