--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,9 +1,12 @@
-<h1>Welcome, <%=@user.username%></h1>
+<h1>Welcome, <%=@user.username%>!</h1>
 
 <%@tweet.each do |tweet|%>
-<%=tweet.content%>
+<h2><%= tweet.content %></h2>
+<a href="/tweets/<%=tweet.id%>">Show/Delete Tweet</a>
+<a href="/tweets/<%=tweet.id%>/edit">Edit Tweet</a>
+<hr>
 <%end%>
 
+<br><br>
+<a href="/tweets/new">New Tweet</a><br><br>
 <a href="/logout">Log Out</a>
-<a href="/login">Log In Here</a>
-<a href="/signup">Sign Up Here</a>
