Conditional Editing and Usernames now work for Tweets

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,3 +4,5 @@
   <input type="text" name="password" placeholder="Password:">
   <input type="submit" value="submit">
 </form>
+
+<br><a href="/signup">Or Sign Up, son!</a>
