--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -9,4 +9,5 @@
   <input type="submit" value="Delete Tweet">
 </form>
 
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a><br>
+<a href="/tweets">Head Home</a>
