--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -14,7 +14,7 @@
     <input type="submit" value="Delete Tweet">
   </form>
 <br>
-<a href="./edit">Edit Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 <% end %>
   
 </body>
