--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>New Tweet</title>
-</head>
-<body>
-  <h3>New Tweet:</h3>
+<h3>New Tweet:</h3>
   <form action="/tweets" method="post">
-    <label for="content">Your thoughts:</label>
-    <input type="text" id="content" name="content"><br><br>
-    <input type="submit" value="submit">
+   <div class="form-group">
+    <textarea id="content" name="content" class="form-control" rows="2" placeholder="Enter your tweet"></textarea>
+    </div>
+     <div class="form-group">
+    <input class="btn btn-primary" type="submit" id="submit" value="Tweet!">
+    </div>
   </form>
-  
-</body>
-</html>
