--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Edit Tweet</title>
-</head>
-<body>
-  <h3>Edit Tweet:</h3>
+<h3>Edit Tweet:</h3>
   <form action="/tweets/<%=@tweet.id%>" method="post">
-    <label for="content">Your thoughts:</label>
-    <input type="text" id="content" name="content" value="<%=@tweet.content%>"><br><br>
-    <input type="hidden" id ="hidden" name="_method" value="PATCH">
-    <input type="submit" value="submit">
+   <div class="form-group">
+    <textarea id="content" name="content" class="form-control" rows="2"><%=@tweet.content%></textarea>
+    </div>
+     <div class="form-group">
+    <input class="btn btn-primary" type="submit" id="submit" value="Edit Tweet">
+    </div>
+        <input type="hidden" id ="hidden" name="_method" value="PATCH">
   </form>
-  
-</body>
-</html>
