--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,14 +6,12 @@
 </head>
 <body>
 <h2>Welcome, <%=@username%>!</h2>
-<h2>Tweets:</h2>
-<ul>
+<h2>Your Tweets Timeline</h2>
   <%@tweets.each do |tweet|%>
-  <li>
-    <a href="/tweets/<%= tweet.id %>"><%=tweet.content%></a>
-  </li>
+  <li><h4>
+    <a href="/tweets/<%= tweet.id %>"><%=tweet.content%></a> by <%= tweet.user.username %>
+  </h4></li>
   <%end%>
-</ul>
   
 </body>
 </html>
