--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,12 @@
 <h1>Login to Fwitter</h1>
-<form method="post" action="/login">
-<label>Username: </label><input type="text" name="username" id="username"><br/>
-<label>Password: </label><input type="text" name="password" id="password"><br/>
-<input type="submit" value="submit">
+<form method="post" action="/login" class-"form-line">
+ <div class="form-group">
+ <div class="col-sm-offset-4 col-sm-4">
+<label>Username: </label><input type="text" class="form-control" name="username" id="username">
+<label>Password: </label><input type="password" class="form-control" name="password" id="password">
+<br>
+<input class="btn btn-primary" type="submit" id="submit" value="Login">
+</div>
+</div>
+
 </form>
