--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,7 +1,9 @@
 <h1>Sign Up for Fwitter</h1>
-<form method="post" action="/signup">
-<label>Username: </label><input type="text" name="username" id="username"><br/>
-<label>E-mail: </label><input type="text" name="email" id="email"><br/>
-<label>Password: </label><input type="text" name="password" id="password"><br/>
-<input type="submit" value="submit">
+<form method="post" action="/signup" class-"form-line">
+ <div class="form-group">
+ <div class="col-sm-offset-4 col-sm-4">
+<label>Username: </label><input type="text" class="form-control" name="username" id="username"><br/>
+<label>E-mail: </label><input type="text" class="form-control" name="email" id="email"><br/>
+<label>Password: </label><input type="password"  class="form-control" name="password" id="password"><br/>
+<input class="btn btn-primary" type="submit" id="submit" value="Signup">
 </form>
