--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <form action="/login" method="post">
   <input type="text" name="username" placeholder="username">
   <input type="password" name="password" placeholder="password" >
-  <button type="submit" name="login"></button>
+  <button type="submit" name="submit">submit</button>
 </form>
