--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,4 @@
-<% @tweets.each do |t| %>
-  <%= t.name %>
+<h1>Welcome, <%= @user.username %></h1>
+<% Tweet.all.each do |t| %>
+  <%= t.content %>
 <% end %>
