--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,5 @@
 <form action="/tweets/<%= @tweet.id %>" method="post">
   <input type="text" name="content" value="<%= @tweet.content %>">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
   <button type="submit" >submit</button>
 </form>
