--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,5 +2,5 @@
   <input type="text" name="username" placeholder="username">
   <input type="password" name="password" placeholder="password" >
   <input type="email" name="email" placeholder="email">
-  <button type="submit" name="create"></button>
+  <button type="submit" >create</button>
 </form>
